# django-versioned-models

./: .gitignore  DJANGO_COMMANDS.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini
django_versioned_models/: __init__.py  mixins.py  models.py  services.py
django_versioned_models/management/commands/: approve_release.py  create_release.py  deprecate_release.py  lock_release.py  unlock_release.py
