[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-versioned-models"
version = "0.1.0"
description = "Drop-in versioning for Django models — releases, data status workflow, and CI integration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "aviz92" }]
requires-python = ">=3.12"
keywords = ["django", "versioning", "models", "release", "data-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
drf = [
    "djangorestframework>=3.14",
]
dev = [
    "pytest",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/aviz92/django-versioned-models"
Repository = "https://github.com/aviz92/django-versioned-models"
Issues = "https://github.com/aviz92/django-versioned-models/issues"

[tool.hatch.build.targets.wheel]
packages = ["django_versioned_models"]
