[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-versioned-models"
version = "0.1.2"
description = "Drop-in versioning for Django models — releases, data status workflow, and CI integration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "aviz92" }]
requires-python = ">=3.12"
keywords = ["django", "versioning", "models", "release", "data-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "django>=4.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-plugins>=2.0.2",
]

[project.optional-dependencies]
drf = [
    "djangorestframework>=3.14",
]
dev = [
    "pytest",
    "pytest-django",
    "djangorestframework>=3.14",
]

[project.urls]
Homepage = "https://github.com/aviz92/django-versioned-models"
Repository = "https://github.com/aviz92/django-versioned-models"
Issues = "https://github.com/aviz92/django-versioned-models/issues"

[tool.hatch.build.targets.wheel]
packages = ["django_versioned_models"]

[tool.hatch.build.targets.wheel.sources]
"django_versioned_models" = "django_versioned_models"

[tool.hatch.build.targets.sdist]
include = [
    "django_versioned_models/**/*.py",
    "django_versioned_models/migrations/*.py",
]
